--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "pizza-web-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,11 +10,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "dotenv": "^17.2.3",
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "geist": "^1.7.0",
+    "next": "^16.1.6",
+    "pg": "^8.18.0",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -23,12 +26,12 @@
     "@types/node": "25.2.0",
     "@types/react": "19.2.11",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "latest",
     "eslint-config-prettier": "^10.1.8",
     "jsdom": "^28.0.0",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "^5.22.0",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4",
     "vitest": "^4.0.18"
   }
