--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.2",
+    "@types/aria-query": "^5.0.4",
     "@types/node": "25.2.0",
     "@types/react": "19.2.11",
     "eslint": "^9",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^10.1.8",
     "jsdom": "^28.0.0",
+    "knip": "^5.84.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "^7.4.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "^4",
     "vitest": "^4.0.18"
   }
